// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<Button
  className="ui-shared__button sg-exe6v7-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-1gad0ov-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<Button
  className="ui-shared__button sg-1bz5s5t-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-2jbepc-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<Button
  className="ui-shared__button sg-exe6v7-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-1gad0ov-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<Button
  className="ui-shared__button sg-1p8mj3m-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-1gad0ov-content"
  >
    Press me
  </div>
</Button>
`;
